objects/Case/fields/ADO_Number__c.field-meta.xml
<CustomField>
    <fullName>ADO_Number__c</fullName>
    <label>ADO #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>