objects/Case/fields/AP_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>AP_Assigned_To__c</fullName>
    <label>AP Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Danielle Brown</fullName>
            </value>
            <value>
                <fullName>Hemal Naik</fullName>
            </value>
            <value>
                <fullName>Louis Galasso</fullName>
            </value>
            <value>
                <fullName>Stacey Robinson</fullName>
            </value>
            <value>
                <fullName>Tami Sitman</fullName>
            </value>
            <value>
                <fullName>Vipin Chackonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>