objects/Case/fields/AP_Category__c.field-meta.xml
<CustomField>
    <fullName>AP_Category__c</fullName>
    <label>AP Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH Verifications</fullName>
            </value>
            <value>
                <fullName>Coupa Orders</fullName>
            </value>
            <value>
                <fullName>Payment Inquiry</fullName>
            </value>
            <value>
                <fullName>Coupa Expense</fullName>
            </value>
            <value>
                <fullName>W-9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>