objects/Case/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To:</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <value>005f4000000oIh9AAE</value>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <value>005f4000000oDfCAAU</value>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <value>0058H00000562vMQAQ</value>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <value>005f4000000oHyEAAU</value>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <value>005f4000000olNbAAI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>