objects/Case/fields/Billing_Package__c.field-meta.xml
<CustomField>
    <fullName>Billing_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Package</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>