objects/Case/fields/Billing_Package_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Package_Number__c</fullName>
    <label>Billing Package Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>