objects/Case/fields/Certificate_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Insurance__c</fullName>
    <label>Certificate of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>