objects/Case/fields/Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name__c</fullName>
    <label>Contact Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>