objects/Case/fields/Deployed_to_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployed_to_Production_Date__c</fullName>
    <label>Deployed to Production Date</label>
    <type>DateTime</type>
</CustomField>