objects/Case/fields/EQAI_WO_Number__c.field-meta.xml
<CustomField>
    <fullName>EQAI_WO_Number__c</fullName>
    <label>EQAI WO #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>