objects/Case/fields/EQAI_WO_Void_Reason__c.field-meta.xml
<CustomField>
    <fullName>EQAI_WO_Void_Reason__c</fullName>
    <label>EQAI WO Void Reason</label>
    <type>TextArea</type>
</CustomField>