objects/Case/fields/EQAI_WOQ_Number__c.field-meta.xml
<CustomField>
    <fullName>EQAI_WOQ_Number__c</fullName>
    <label>EQAI WOQ #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>