objects/Case/fields/IT_Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>IT_Support_Tier__c</fullName>
    <label>IT Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1 (30 minutes)</fullName>
            </value>
            <value>
                <fullName>Tier 2 (Research Phase)</fullName>
            </value>
            <value>
                <fullName>Tier 3 (Higher Level Support)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>