objects/Case/fields/Labpack_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Labpack_Assigned__c</fullName>
    <label>Labpack Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SC73 - Dan Valentine</fullName>
            </value>
            <value>
                <fullName>SC74 - Joe Peifer</fullName>
            </value>
            <value>
                <fullName>SC75 - Joe Peifer</fullName>
            </value>
            <value>
                <fullName>SC77 - Noah Scudere-Weiss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>