objects/Case/fields/LabpackQuote__c.field-meta.xml
<CustomField>
    <fullName>LabpackQuote__c</fullName>
    <label>Labpack Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Requested</fullName>
            </value>
            <value>
                <fullName>Received/In Progress</fullName>
            </value>
            <value>
                <fullName>Requires Additional Info</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>