objects/Case/fields/MDN_Case__c.field-meta.xml
<CustomField>
    <fullName>MDN_Case__c</fullName>
    <label>MDN Case #</label>
    <length>250</length>
    <type>Text</type>
</CustomField>