objects/Case/fields/Payment_Term_CCID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_CCID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term CCID</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Cases (Payment Term CCID)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>