objects/Case/fields/Send_Attachment_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Attachment_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send_Attachment_Email</label>
    <type>Checkbox</type>
</CustomField>