objects/Case/fields/Snow_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Snow_Ticket_Number__c</fullName>
    <label>Snow Ticket #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>