objects/Case/fields/Snow_Ticket_Ref__c.field-meta.xml
<CustomField>
    <fullName>Snow_Ticket_Ref__c</fullName>
    <label>Snow Ticket Ref #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>