objects/Case/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Ownership</fullName>
            </value>
            <value>
                <fullName>Pay Rule</fullName>
            </value>
            <value>
                <fullName>Equipment Resources</fullName>
            </value>
            <value>
                <fullName>Compliance Tasks</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Rate Sheets</fullName>
            </value>
            <value>
                <fullName>Job Task Templates</fullName>
            </value>
            <value>
                <fullName>Labor Resources</fullName>
            </value>
            <value>
                <fullName>Material Resources</fullName>
            </value>
            <value>
                <fullName>Waste Resources</fullName>
            </value>
            <value>
                <fullName>Ring DNA Sequences</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Move SO/T&amp;M</fullName>
            </value>
            <value>
                <fullName>Remove Surcharge</fullName>
            </value>
            <value>
                <fullName>Subcategory</fullName>
            </value>
            <value>
                <fullName>QtC Batch Error</fullName>
            </value>
            <value>
                <fullName>Coupa Error</fullName>
            </value>
            <value>
                <fullName>Customer Error</fullName>
            </value>
            <value>
                <fullName>Sales Order Error</fullName>
            </value>
            <value>
                <fullName>Contract Request</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Email Alerts</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>MDN Regression</fullName>
            </value>
            <value>
                <fullName>QtC Modification</fullName>
            </value>
            <value>
                <fullName>User Permissions</fullName>
            </value>
            <value>
                <fullName>Price/Cost</fullName>
            </value>
            <value>
                <fullName>Billing Rule</fullName>
            </value>
            <value>
                <fullName>Approval Tree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>