objects/Case/fields/Subsidiary_Company2__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Company 2</label>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipLabel>Cases (Subsidiary Company 2)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>