objects/Case/fields/Subsidiary_Vendor_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Vendor_Number_2__c</fullName>
    <label>CCID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>