objects/Case/fields/Subsidiary_Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Vendor_Number__c</fullName>
    <label>ACVID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>