objects/Case/fields/TimeNow__c.field-meta.xml
<CustomField>
    <fullName>TimeNow__c</fullName>
    <formula>TIMEVALUE( NOW() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeNow</label>
    <type>Time</type>
</CustomField>