objects/Case/fields/Vendor_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Billing_Address__c</fullName>
    <label>Remitance Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>