objects/Case/fields/Vendor_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Billing_City__c</fullName>
    <label>Remittance City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>