objects/Case/fields/Vendor_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Billing_Country__c</fullName>
    <label>Remittance Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>