objects/Case/fields/Vendor_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Billing_State__c</fullName>
    <label>Remittance State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>