objects/Case/fields/Vendor_Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Billing_Zip__c</fullName>
    <label>Remittance Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>