objects/Case/fields/Vendor_Requires_a_Credit_Application__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Requires_a_Credit_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Requires a Credit Application</label>
    <type>Checkbox</type>
</CustomField>