objects/Case/recordTypes/AP_Inquiries.recordType-meta.xml
<RecordType>
    <fullName>AP_Inquiries</fullName>
    <active>true</active>
    <businessProcess>Cases</businessProcess>
    <label>AP Inquiries</label>
</RecordType>