objects/Case/recordTypes/Case_Record.recordType-meta.xml
<RecordType>
    <fullName>Case_Record</fullName>
    <active>true</active>
    <businessProcess>Cases</businessProcess>
    <label>Salesforce Support</label>
</RecordType>