objects/Case/recordTypes/IT_Support.recordType-meta.xml
<RecordType>
    <fullName>IT_Support</fullName>
    <active>true</active>
    <businessProcess>Cases</businessProcess>
    <label>IT Support</label>
</RecordType>