objects/Case/recordTypes/Labpack.recordType-meta.xml
<RecordType>
    <fullName>Labpack</fullName>
    <active>true</active>
    <businessProcess>Cases</businessProcess>
    <label>Labpack</label>
</RecordType>