objects/Case/recordTypes/Payroll_Support.recordType-meta.xml
<RecordType>
    <fullName>Payroll_Support</fullName>
    <active>true</active>
    <businessProcess>Cases</businessProcess>
    <label>Payroll Support</label>
</RecordType>