objects/Case/listViews/Accounting_Department_Case.listView-meta.xml
<ListView>
    <fullName>Accounting_Department_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Accounting Department</label>
    <queue>Accounting_Department</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>