objects/Case/listViews/Case_Owners_Case.listView-meta.xml
<ListView>
    <fullName>Case_Owners_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Owners</label>
    <queue>Case_Owners</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>