objects/Case/listViews/IT_Support_Closed.listView-meta.xml
<ListView>
    <fullName>IT_Support_Closed</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>FWD: Undeliverable:</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>The number of licenses for your Exchange Online</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>SFTP Folder Updated</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>Resolved in</value>
    </filters>
    <label>IT Support Closed</label>
    <queue>IT_Support</queue>
</ListView>