objects/Case/listViews/Network_Case.listView-meta.xml
<ListView>
    <fullName>Network_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Network</label>
    <queue>Network</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>