objects/Case/listViews/Payroll_Support_Case.listView-meta.xml
<ListView>
    <fullName>Payroll_Support_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Open,In Progress,Escalated,Need Approval,Team Review,Pending MDN,Pending SF User,On Hold</value>
    </filters>
    <label>Payroll Support Open Cases</label>
    <queue>Payroll_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>